--- a/cloudpebble/requirements.txt
+++ b/cloudpebble/requirements.txt
@@ -16,11 +16,12 @@ gevent==1.1.1
 psycogreen==1.0.1
 requests==2.22.0
 oauth2client==1.5.2
-#django-bower==5.2.0
+django-bower==5.2.0
 mock==2.0.0
 
 # These are used for Heroku hosting setup.
 whitenoise==3.3.0
+#whitenoise[brotli]
 gunicorn==19.5.0
 dj-database-url==0.5.0
 newrelic==2.50.0.39
