--- a/cloudpebble-ycmd-proxy/Dockerfile
+++ b/cloudpebble-ycmd-proxy/Dockerfile
@@ -1,25 +1,27 @@
 FROM gfunkmonk/alpine-python-node:3.10 AS squashme
 SHELL ["/bin/bash", "-c"]
 
-RUN apk update && apk add --no-cache ncurses-dev clang-dev && apk add --no-cache --virtual .build-deps gcc g++  make automake git curl xz wget cmake python2-dev llvm && \
-  rm -rf /var/cache/apk/* && \
-  curl -L https://unpkg.com/@pnpm/self-installer | node
+RUN apk update && apk add --no-cache ncurses-dev && apk add --no-cache --virtual .build-deps gcc g++ make automake git curl xz wget cmake python2-dev \ 
+  && rm -rf /var/cache/apk/* 
+  #&& curl -L https://unpkg.com/@pnpm/self-installer | node
 
 # ycmd
+ADD CMakeLists-v7.txt /tmp/CMakeLists.txt
+
 RUN git clone https://github.com/Valloric/ycmd.git /ycmd && cd /ycmd && \
 #RUN git clone https://github.com/gfunkmonk/ycmd.git -b cloudpebble /ycmd && cd /ycmd && \
   #git reset --hard c5ae6c2915e9fb9f7c18b5ec9bf8627d7d5456fd && \
   git reset --hard 10c456c6e32487c2b75b9ee754a1f6cc6bf38a4f && \
   git submodule update --init --recursive && \
+  cp /tmp/CMakeLists.txt cpp/ycm/CMakeLists.txt && \
   #./build.sh --clang-completer
   #python build.py --clang-completer --system-libclang
-  python build.py --clang-completer --system-libclang	
-  #python build.py --clang-completer
+  #python build.py --clang-completer --system-libclang	
+  python build.py --clang-completer 
 
 # Grab the toolchain
-RUN mkdir /arm-cs-tools && \
-  curl -L "https://gfunkmonk.s3.amazonaws.com/arm-cs-tools-4.9-2017.01.tar.xz" | \
-  tar --strip-components=1 -xJ -C /arm-cs-tools
+RUN curl -o /tmp/arm-cs-tools.tar https://cloudpebble-vagrant.s3.amazonaws.com/arm-cs-tools-stripped.tar && \
+  tar -xf /tmp/arm-cs-tools.tar -C / && rm /tmp/arm-cs-tools.tar
 
 # Install SDK 2
 RUN mkdir /sdk2 && \
@@ -34,7 +36,7 @@ RUN mkdir /sdk3 && \
 ADD requirements.txt /tmp/requirements.txt
 RUN pip install --no-cache-dir -r /tmp/requirements.txt
 
-RUN apk del .build-deps
+RUN apk del .build-deps && rm -rf /var/cache/apk/*
 
 COPY . /code
 FROM scratch
