--- a/cloudpebble-qemu-controller/requirements.txt
+++ b/cloudpebble-qemu-controller/requirements.txt
@@ -1,14 +1,16 @@
-Flask==0.10.1
-Flask-Cors==1.10.1
-Jinja2==2.7.3
+#Flask==0.10.1
+#Flask-Cors==1.10.1
+Flask==1.0.1
+Flask-Cors==3.0.2
+Jinja2==2.10
 MarkupSafe==0.23
-Werkzeug==0.9.6
+Werkzeug==0.14
 backports.ssl-match-hostname==3.4.0.2
 gevent==1.1.1
 gevent-websocket==0.9.3
 greenlet>=0.4.14
 itsdangerous==0.24
-redis==2.10.5
-six==1.9.0
-websocket-client==0.32.0
+redis==2.10.3
+six==1.8.0
+websocket-client==0.23.0
 wsgiref==0.1.2
