--- a/cloudpebble-ycmd-proxy/requirements.txt
+++ b/cloudpebble-ycmd-proxy/requirements.txt
@@ -1,12 +1,12 @@
-Flask==0.10.1
-Flask-Cors==1.9.0
-Jinja2==2.7.3
+Flask==1.0.1
+Flask-Cors==3.0.2
+Jinja2==2.10
 MarkupSafe==0.23
-Werkzeug==0.9.6
+Werkzeug==0.14
 gevent==1.1.1
 gevent-websocket>=0.9.3
 greenlet>=0.4.14
 itsdangerous==0.24
-requests==2.22.0
-six==1.9.0
+requests>=2.22.0
+six==1.8.0
 wsgiref==0.1.2
