--- a/cloudpebble/requirements.txt
+++ b/cloudpebble/requirements.txt
@@ -1,20 +1,20 @@
-Django==1.10
+Django==1.9.12
 django-registration==2.0.4
 #-e git://github.com/pebble/django-pipeline.git@pbl-master#egg=pipeline
 amqp==2.5.1
 celery==4.1.0
-flup==1.0.3.dev-20110405
-psycopg2==2.8.4
-qrcode==6.1
-Pillow==6.2.1
+flup==1.0.3.dev-20151210
+psycopg2>=2.8.4
+qrcode==4.0.4
+Pillow==2.9.0
 pygithub==1.14.2
 #python-social-auth==0.1.23
 python-social-auth==0.2.16
-redis==2.10.5
+redis==2.10.3
 boto==2.39.0
 gevent==1.1.1
-psycogreen==1.0.1
-requests==2.22.0
+psycogreen==1.0
+requests>=2.22.0
 oauth2client==1.5.2
 django-bower==5.2.0
 mock==2.0.0
@@ -33,19 +33,19 @@ pypng==0.0.17
 # Additional requirements
 anyjson==0.3.3
 billiard<3.6.0,>=3.5.0.2
-docopt==0.5.0
-greenlet>=0.4.15
+docopt==0.6.2 
+greenlet>=0.4.9 
 httplib2==0.9.2
 kombu==4.0.2
 oauthlib==1.0.3
-pyasn1==0.1.7
-pyasn1-modules==0.0.5
+pyasn1==0.4.3
+pyasn1-modules==0.2.2
 python-openid==2.2.5
 pytz==2016.3
 requests-oauthlib==0.6.1
 rsa==3.4.1
-six==1.12.0
-static3==0.6.1
+six==1.10.0
+static3==0.7.0
 #####################
 #for starting celery now
 watchdog
@@ -56,3 +56,7 @@ python-memcached==1.59
 django-robots==3.0
 django-dotenv==1.4.1
 #django-compat
+django-admin-interface
+django-extensions==2.1.0
+django-timezone-field==2.0
+django-celery-beat==1.4.0
