--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
-version: '3'
+version: '3.7'
 services:
   web:
     build: cloudpebble/
     restart: always
     ports:
     - "80:80"
+    container_name: cloudpebble_web
     volumes:
       - "./cloudpebble/:/code"
-      - "./data/node/:/opt/npm/"
+      - "./data/node:/opt/npm"
     links:
       - redis
       - postgres
@@ -31,9 +32,10 @@ services:
   celery:
     build: cloudpebble/
     restart: always
+    container_name: cloudpebble_celery
     volumes:
       - "./cloudpebble/:/code"
-      - "./data/node/:/opt/npm/"
+      - "./data/node:/opt/npm"
     links:
       - redis
       - postgres
@@ -65,15 +67,19 @@ services:
     ports:
       - "8002:80"
   redis:
-    image: redis:alpine
-    #image: redis
+    #image: woahbase/alpine-redis:x86_64
+    container_name: cloudpebble_redis
+    #image: redis:alpine
+    image: redis
     restart: always
     volumes:
       - "./data/redis:/data"
     ports:
       - 6379:6379
   postgres:
-    image: postgres:11-alpine
+    image: syaadachi/alpine-postgres:latest
+    container_name: cloudpebble_postgres
+    #image: postgres:11-alpine
     #image: postgres
     restart: always
     volumes: 
@@ -81,11 +87,12 @@ services:
     ports:
       - "5432:5432"
   s3:
-    #image: lphoward/fake-s3
-    build: fakes3/
+    image: lphoward/fake-s3
+    #build: fakes3/
     restart: unless-stopped
+    container_name: cloudpebble_s3
     volumes:
-      - "./data/fakes3/:/fakes3_root"
+      - "./data/fakes3:/fakes3_root"
     env_file:
       - ./.env
     ports:
@@ -96,3 +103,10 @@ services:
     restart: unless-stopped
     ports:
       - "11211:11211"
+# Need to describe named volumes, weird, I know
+volumes:
+  cloudpebble_web:
+  cloudpebble_celery:
+  cloudpebble_redis:
+  cloudpebble_postgres:
+  cloudpebble_s3:
