--- a/cloudpebble/requirements.txt
+++ b/cloudpebble/requirements.txt
@@ -2,7 +2,7 @@ Django==1.9.12
 django-registration==2.0.4
 #-e git://github.com/pebble/django-pipeline.git@pbl-master#egg=pipeline
 amqp==2.5.1
-celery==4.1.0
+celery==4.0.1
 flup==1.0.3.dev-20151210
 psycopg2>=2.8.4
 qrcode==4.0.4
@@ -10,8 +10,8 @@ Pillow==2.9.0
 pygithub==1.14.2
 #python-social-auth==0.1.23
 python-social-auth==0.2.16
-redis==2.10.3
-boto==2.39.0
+redis==2.10.5
+boto==2.49.0
 gevent==1.1.1
 psycogreen==1.0
 requests>=2.22.0
@@ -32,11 +32,11 @@ pypng==0.0.17
 
 # Additional requirements
 anyjson==0.3.3
-billiard<3.6.0,>=3.5.0.2
+billiard==3.5.0.3
 docopt==0.6.2 
 greenlet>=0.4.9 
 httplib2==0.9.2
-kombu==4.0.2
+kombu==4.1.0
 oauthlib==1.0.3
 pyasn1==0.4.3
 pyasn1-modules==0.2.2
@@ -45,7 +45,7 @@ pytz==2016.3
 requests-oauthlib==0.6.1
 rsa==3.4.1
 six==1.10.0
-static3==0.7.0
+static3==0.6.2
 #####################
 #for starting celery now
 watchdog
@@ -60,3 +60,7 @@ django-admin-interface
 django-extensions==2.1.0
 django-timezone-field==2.0
 django-celery-beat==1.4.0
+#django-storages==1.6.5
+django-redisboard==3.0.2
+#django-memcache-status==1.3
+#django-admin-tools==0.8.1
