--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,13 @@
-version: '3.7'
+version: '3.4'
 services:
   web:
     build: cloudpebble/
     restart: always
     ports:
     - "80:80"
-    container_name: cloudpebble_web
     volumes:
-      - "./cloudpebble/:/code"
-      - "./data/node:/opt/npm"
+      - ./cloudpebble/:/code
+      - ./data/node:/opt/npm
     links:
       - redis
       - postgres
@@ -18,9 +17,9 @@ services:
     env_file:
       - ./.env
     environment:
-      - DEBUG="yes"
-      - RUN_WEB="yes"
-      - AWS_ENABLED="yes"
+      - DEBUG=yes
+      - RUN_WEB=yes
+      - AWS_ENABLED=yes
       - PORT=80
       - AWS_S3_FAKE_S3=172.245.74.113:8003
       - MEDIA_URL=http://172.245.74.113:8003/builds.cloudpebble.net/
@@ -32,10 +31,9 @@ services:
   celery:
     build: cloudpebble/
     restart: always
-    container_name: cloudpebble_celery
     volumes:
-      - "./cloudpebble/:/code"
-      - "./data/node:/opt/npm"
+      - ./cloudpebble/:/code
+      - ./data/node:/opt/npm
     links:
       - redis
       - postgres
@@ -43,8 +41,8 @@ services:
     env_file:
       - ./.env
     environment:
-      - DEBUG="yes"
-      - RUN_CELERY="yes"
+      - DEBUG=yes
+      - RUN_CELERY=yes
       - AWS_ENABLED=yes
       - EXPORT_ROOT=http://172.245.74.113:8003/export.cloudpebble.net/
       - AWS_S3_FAKE_S3=172.245.74.113:8003
@@ -52,61 +50,51 @@ services:
     build: cloudpebble-qemu-controller/
     restart: unless-stopped
     volumes:
-      - "./cloudpebble-qemu-controller/:/code"
+      - ./cloudpebble-qemu-controller/:/code
     env_file:
       - ./.env
     ports:
-      - "8001:80"
+      - 8001:80
   ycmd:
     build: cloudpebble-ycmd-proxy/
     restart: unless-stopped
     volumes:
-      - "./cloudpebble-ycmd-proxy/:/code"
+      - ./cloudpebble-ycmd-proxy/:/code
     env_file:
       - ./.env  
     ports:
-      - "8002:80"
+      - 8002:80
   redis:
     #image: woahbase/alpine-redis:x86_64
-    container_name: cloudpebble_redis
-    #image: redis:alpine
-    image: redis
+    image: redis:alpine
+    #image: redis
     restart: always
     volumes:
-      - "./data/redis:/data"
+      - ./data/redis:/data
     ports:
       - 6379:6379
   postgres:
     image: syaadachi/alpine-postgres:latest
-    container_name: cloudpebble_postgres
     #image: postgres:11-alpine
     #image: postgres
     restart: always
     volumes: 
-      - "./data/postgres:/var/lib/postgresql/data"
+      - ./data/postgres:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      - 5432:5432
   s3:
-    image: lphoward/fake-s3
-    #build: fakes3/
+    #image: lphoward/fake-s3
+    build: fakes3/
     restart: unless-stopped
-    container_name: cloudpebble_s3
     volumes:
-      - "./data/fakes3:/fakes3_root"
+      - ./data/fakes3:/fakes3_root
     env_file:
       - ./.env
     ports:
-      - "8003:4569"
+      - 8003:4569
   memecached:
     #image: memcached:latest
     build: ./memcached/
     restart: unless-stopped
     ports:
-      - "11211:11211"
-# Need to describe named volumes, weird, I know
-volumes:
-  cloudpebble_web:
-  cloudpebble_celery:
-  cloudpebble_redis:
-  cloudpebble_postgres:
-  cloudpebble_s3:
+      - 11211:11211
