--- a/cloudpebble/requirements.txt
+++ b/cloudpebble/requirements.txt
@@ -2,18 +2,20 @@ Django==1.9.12
 django-registration==2.0.4
 #-e git://github.com/pebble/django-pipeline.git@pbl-master#egg=pipeline
 amqp==2.5.1
-celery==4.0.1
+celery==4.0.2
 flup==1.0.3.dev-20151210
 psycopg2>=2.8.4
 qrcode==4.0.4
 Pillow==2.9.0
 pygithub==1.14.2
 #python-social-auth==0.1.23
-python-social-auth==0.2.16
+#python-social-auth==0.2.21
+social-auth-app-django==2.1.0
+social-auth-core==2.0.0
 redis==2.10.5
-boto==2.49.0
+boto==2.39.0
 gevent==1.1.1
-psycogreen==1.0
+psycogreen==1.0.1
 requests>=2.22.0
 oauth2client==1.5.2
 django-bower==5.2.0
@@ -28,7 +30,7 @@ newrelic==2.50.0.39
 # These are in the SDK requirements.txt and included here to save on Heroku deploy time.
 freetype-py==1.0
 sh==1.08
-pypng==0.0.17
+pypng==0.0.20
 
 # Additional requirements
 anyjson==0.3.3
@@ -45,7 +47,7 @@ pytz==2016.3
 requests-oauthlib==0.6.1
 rsa==3.4.1
 six==1.10.0
-static3==0.6.2
+static3==0.7.0
 #####################
 #for starting celery now
 watchdog
@@ -60,7 +62,4 @@ django-admin-interface
 django-extensions==2.1.0
 django-timezone-field==2.0
 django-celery-beat==1.4.0
-#django-storages==1.6.5
 django-redisboard==3.0.2
-#django-memcache-status==1.3
-#django-admin-tools==0.8.1
