--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,8 +74,8 @@ services:
     ports:
       - 6379:6379
   postgres:
-    image: syaadachi/alpine-postgres:latest
-    #image: postgres:11-alpine
+    #image: syaadachi/alpine-postgres:latest
+    image: postgres:11-alpine
     #image: postgres
     restart: always
     volumes: 
